--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,20 @@
-/* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  /* Шрифты */
+  --main-font: "Inter", sans-serif;
+  --main-font-weight-normal: 400;
+  --main-font-weight-bold: 700;
+  --main-font-size: 18px;
+  --main-font-size-small: 14px;
+  --secondary-font: "PressStart2P", sans-serif;
+  --line-height-main-font: 21px;
+  --text-color: #000;
+
+  /* Элементы */
+  --background-page: repeating-linear-gradient(
+      90deg,
+      #d3d3d3 0 2px,
+      rgb(0 0 0 / 0%) 2px 4px
+    ),
+    repeating-linear-gradient(180deg, #d3d3d3 0 2px, rgb(0 0 0 / 0%) 2px 4px),
+    linear-gradient(180deg, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
+}
