--- a/styles/style.css
+++ b/styles/style.css
@@ -128,13 +128,49 @@
   background-color: #fff;
   width: 130px;
   height: 38px;
+  position: relative;
+  overflow: hidden;
+}
+
+.card__like-button:focus-visible {
+  outline: none;
+  box-shadow: 2px 2px 0 currentColor;
+  transition: box-shadow 0.3s ease;
+}
+
+.card__like-button::before,
+.button__save::before {
+  position: absolute;
+  background: #000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+  content: "";
+}
+
+.card__like-button:hover::before,
+.button__save:hover::before {
+  transform: translateX(0);
 }
 
 .button__text {
+  position: relative;
   font-family: var(--secondary-font);
   font-size: var(--main-font-size-small);
   justify-self: center;
   align-self: center;
+}
+
+.button__text,
+.floppy,
+.button__save-text {
+  position: relative;
+  mix-blend-mode: difference;
+  filter: invert(1);
+  transition: filter 0.5s ease-in-out;
 }
 
 .card__icon-button {
@@ -145,6 +181,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.card__icon-button:focus-visible {
+  outline: none;
+  border: 2px solid #000;
+  transition: border 0.3s ease;
 }
 
 .button__save {
@@ -160,11 +202,58 @@
   align-items: center;
   justify-self: center;
   gap: 8px;
+  overflow: hidden;
+  position: relative;
+}
+
+.button__save:focus-visible {
+  outline: none;
+  box-shadow: 2px 2px 0 currentColor;
 }
 
 .floppy {
   width: 28px;
   height: 28px;
+}
+
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+dialog {
+  padding: 0;
+}
+
+.dialog {
+  max-width: 357px;
+  padding: 30px 37px 30px 37px;
+}
+
+dialog .floppy {
+  width: 96px;
+  height: 39px;
+  align-self: center;
+}
+
+dialog .button__save {
+  margin: 0;
+  width: 100%;
+  height: 38px;
+  justify-content: center;
+}
+
+.dialog__content {
+  display: flex;
+  gap: 20px;
+  margin-block-end: 30px;
+}
+
+dialog h3 {
+  font-size: var(--main-font-size-small);
+  font-family: var(--secondary-font);
+  margin: 0;
+  text-transform: uppercase;
+  justify-self: end;
 }
 
 /* Фильтры */
@@ -201,6 +290,8 @@
   filter: sepia(100%) contrast(200%) blur(5px);
 }
 
+/* Адаптивные стили */
+
 @media (width > 900px) {
   .header {
     padding: 128px 14px;
@@ -213,5 +304,13 @@
   .floppy {
     width: 21px;
     height: 21px;
+  }
+
+  .dialog {
+    padding: 30px 32px 32px 30px;
+  }
+
+  .dialog h3 {
+    margin-inline-end: 20px;
   }
 }
