--- a/styles/animations.css
+++ b/styles/animations.css
@@ -35,10 +35,14 @@
   transition-delay: 0s;
 }
 
-.like-icon:active .core,
+.like-icon:active .core {
+  fill: var(--red-fill);
+  transition: fill 0.3s ease 0s;
+}
+
 .like-icon:active .main-body {
   fill: var(--red-fill);
-  transition: fill 0.05s ease;
+  transition: fill 0.3s ease 0.05s;
 }
 
 .like-icon.is-liked .core {
@@ -73,9 +77,7 @@
 }
 
 .card__icon-button:focus-visible {
-  box-sizing: border-box;
-  outline: 2px solid black;
-  transition: outline 0.3s ease;
+  border: 2px solid black;
 }
 
 @keyframes spark {
